# lsof

.github/workflows/: winlsof-ci.yml  winlsof-release.yml
winlsof/: CHANGELOG.md  Cargo.toml  NOTICE  README.md
winlsof/crates/lsof-backend-windows/: Cargo.toml
winlsof/crates/lsof-backend-windows/src/: backend.rs  etw.rs  handles.rs  lib.rs  mapped.rs  modules.rs  peb.rs  privilege.rs  process.rs  resolve.rs  restart.rs  sockets.rs  tcpinfo.rs  threads.rs  util.rs
winlsof/crates/lsof-cli/: Cargo.toml  app.manifest
winlsof/crates/lsof-cli/src/: args.rs  main.rs
winlsof/crates/lsof-cli/tests/: windows_live.rs
winlsof/crates/lsof-core/: Cargo.toml
winlsof/crates/lsof-core/src/: backend.rs  lib.rs  mock.rs  model.rs  selection.rs  service.rs
winlsof/crates/lsof-core/src/render/: fields.rs  json.rs  mod.rs  table.rs
winlsof/crates/lsof-core/tests/: golden.rs
winlsof/docs/: code-signing.md  etw-spike.md  feature-parity-plan.md  known-limitations.md  research-roadmap.md  windows-validation.md
winlsof/smoketest/: Invoke-WinlsofSmokeTest.ps1  README.md  Test-Lsof.ps1
